--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,4 +1,18 @@
+.ul-socials {
+  list-style-type: none !important;
+  padding: 0;
+  display: block;
+  text-align: center;
+}
 
+.ul-socials li {
+  display: inline-block;
+}
+
+.nested-links .ul-socials li a {
+  text-align: center;
+  padding: 8px;
+}
 
  .dropdown {
     position: relative;
