--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -4,7 +4,7 @@
       &copy; {{ with .Site.Copyright | default .Site.Title }} {{ . | safeHTML }} {{ now.Format "2006"}} {{ end }}
     </a>
     {{/* next div added by me for random quotes */}}
-    <div className="pa4">
+    <div class="pa4">
       <blockquote class="athelas ml0 mt0 pl4 white-90 bl bw2 b--blue">
         <p id="quotation" class="f5 f4-m f3-l white-90 lh-copy measure mt0"></p>
         <cite id="quote-source" class="f6 ttu tracked fs-normal"></cite>
