--- a/layouts/shortcodes/collapse.html
+++ b/layouts/shortcodes/collapse.html
@@ -2,12 +2,13 @@
 {{$label := .Get "label"}}
 
 <div class="wrap-collapsible">
-    <input id="{{$id}}" class="toggle" type="checkbox">
-    <label for="{{$id}}" class="lbl-toggle">{{$label}}</label>
-    <div class="collapsible-content">
-      <div class="content-inner">
-        {{ .Inner }}
-      </div>
-    </div>
+<input id="{{$id}}" class="toggle" type="checkbox">
+<label for="{{$id}}" class="lbl-toggle">{{$label}}</label>
+<div class="collapsible-content">
+<div class="content-inner">
+
+{{ .Inner | markdownify }}
+</div>
+</div>
 </div>
   
