--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -56,7 +56,7 @@
   padding: 1rem;
 
   color: #A77B0E;
-  background: #FAE042;
+  background: #e8ede6;
 
   cursor: pointer;
 
@@ -91,6 +91,14 @@
   border-bottom-right-radius: 7px;
   padding: .5rem 1rem;
 }
+
+.collapsible-content {
+  max-height: 0px;
+  overflow: hidden;
+
+  transition: max-height .25s ease-in-out;
+}
+
 
 .toggle:checked + .lbl-toggle + .collapsible-content {
   max-height: 100vh;
