start vocabulary article

--- a/layouts/shortcodes/collapse.html
+++ b/layouts/shortcodes/collapse.html
@@ -1,3 +1,5 @@
+<!-- inspired by https://www.digitalocean.com/community/tutorials/css-collapsible-->
+
 {{$id := .Get "id"}}
 {{$label := .Get "label"}}
 
