--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -113,5 +113,20 @@
   border-bottom-left-radius: 0;
 }
 
+table {
+  border-collapse: collapse;
+}
+
+th, td {
+  border: 1px solid black;
+  padding: 5px;
+}
+
+
+
+
+
+
+
 
 
