--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -46,6 +46,17 @@
   cursor: pointer;
 }
 
+.image-quiz {
+  max-height: 250px !important;
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+
+.quiz-form-control {
+  padding-left: 5px;
+}
+
 /********************************************
 * accordian.  inspiration from 
 * https://codepen.io/Anotherdago/pen/yjVxOB 
