better button behavior, prepare for more quizzes

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -57,6 +57,10 @@
   padding-left: 5px;
 }
 
+.hide-at-start {
+  visibility: hidden;
+}
+
 /********************************************
 * accordian.  inspiration from 
 * https://codepen.io/Anotherdago/pen/yjVxOB 
