--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -53,6 +53,21 @@
   margin-right: auto !important;
 }
 
+.sanskrit-image-quiz {
+  max-height: 100px !important;
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+
+.text-question {
+  border: 2px solid #000; /* Black border with 2px width */
+  border-radius: 15px; /* Rounded corners with 15px radius */
+  padding: 20px; /* Padding inside the box */
+  text-align: center; /* Center the text inside the box */
+  background-color: rgb(245, 245, 220);
+}
+
 .quiz-form-control {
   padding-left: 5px;
 }
